# loopsleuth

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  loopsleuth.toml  pyproject.toml  setup.py  setup.sh
.github/workflows/: loopsleuth.yml  publish.yml  test-build.yml
docs/: ARCHITECTURE.md  BOOTSTRAP.md  CACHE_IMPLEMENTATION.md  COMPARISON.md  PIP_INSTALL_SETUP.md  PYPI_PUBLISHING.md  PYTHON_INSTALL.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.1.1.md  RELEASE_NOTES_0.1.2.md
examples/: test_parse.rs
github-app/: Dockerfile  README.md  action.yml  analyze_pr.py  example-workflow.yml  requirements.txt
github-app/app/: analyzer.py  comment_formatter.py  config.py  diff_parser.py  function_extractor.py  github_client.py  main.py
python/loopsleuth/: __init__.py  __main__.py  models.py
src/: main.rs
test_examples/: performance_issues.py  regression_tests.py  sample.py
tests/: run_checks.py  test_bootstrap.sh  test_pip_install.sh  test_regression.sh
tests/checks/: conversion_churn.py  expensive_sort_key.py  growing_container.py  linear_in_loop.py  mask_built_in_layer_loop.py  python_loop_over_token_dimension.py  quadratic.py  unbounded_alloc.py
tests/extra/: n_plus_one_examples.py
tests/golden/: README.md  conversion-churn.json  expensive-sort-key.json  growing-container.json  linear-in-loop.json  mask-built-in-layer-loop.json  python-loop-over-token-dimension.json  quadratic.json  unbounded-alloc.json
