[package]
name = "loopsleuth"
version = "0.1.0"
edition = "2021"

[dependencies]
rustpython-parser = "0.4.0"
rustpython-ast = "0.4.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
llama-cpp-2 = "0.1"
libc = "0.2.180"
chrono = "0.4.43"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
