[package]
name = "loopsleuth"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "loopsleuth_bin"
path = "src/main.rs"

[dependencies]
rustpython-parser = "0.4.0"
rustpython-ast = "0.4.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
llama-cpp-2 = "0.1"
libc = "0.2.180"
chrono = "0.4.43"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
similar = { version = "2.7.0", features = ["text"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
